--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "can-homeauto",
+  "name": "atom2mqtt_wrapper",
   "version": "0.0.0",
   "description": "Protocol implementation for auml can homeautomation",
   "main": "index.js",
@@ -9,16 +9,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mattiasrunge/can-homeauto.git"
+    "url": "git+https://github.com/HomeAutomation/atom2mqtt_wrapper.git"
   },
   "author": "Mattias Runge <mattias@runge.se>",
   "license": "MIT",
   "dependencies": {
     "mqtt": "^2.0.1",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "rrd": "git+https://github.com/Orion98MC/node_rrd.git"
   },
   "bugs": {
-    "url": "https://github.com/mattiasrunge/can-homeauto/issues"
+    "url": "https://github.com/HomeAutomation/atom2mqtt_wrapper/issues"
   },
   "engines": {
     "node": ">= 7.0.0"
